# ReplaySorcery

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  README.md  meson.build  meson_options.txt  replay-sorcery.default.conf  replay-sorcery.service  replay-sorcery.service.in  rs-build-config.h.in
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: arch.yml  ci.yml  deploy-arch.yml
old/: error.c  error.h  main.c  path.c  path.h  pktcircle.c  pktcircle.h  record.c  record.h  save.c  save.h
old/config/: config.c  config.h  file.c  file.h  paths.c
old/encoder/: encoder.c  encoder.h  video.c  video.h
old/input/: input.c  input.h  video.c  video.h
old/user/: debug.c  debug.h  default.c  default.h  user.c  user.h  x11.c  x11.h
pkg/archlinux/: create-pkgbuild.sh
src/: audio.c  audio.h  buffer.c  buffer.h  circle.c  circle.h  common.c  common.h  compress.c  compress.h  config.c  config.h  error.c  error.h  log.c  log.h  main.c  main.h  mp4.c  output.c  output.h  path.c  path.h  pktcircle.c  pktcircle.h  record.c  record.h  rsbuild.h.in  save.c  save.h  socket.c  socket.h  std.h  stream.c  stream.h  thread.c  thread.h  user.c  user.h  util.c  (+1 more)
src-old/: compress.c  compress.h  std.h
src-old/audio_input/: audio.h  audio_encoder.c  audio_encoder.h
src-old/system/: system.c
src-old/util/: buffer.h  frame.c  frame.h  log.c  log.h  memory.h  path.c  string.c  string.h
src/audio/: aacenc.c  abuffer.c  abuffer.h  adevice.c  adevice.h  aencoder.c  aencoder.h  audio.c  audio.h  fdkenc.c  pulsedev.c
src/audio_input/: audio.c  audio.h  audio_encoder.c  audio_encoder.h
src/command/: command.h  ctrlcmd.c  kmscmd.c  kmscmd.h  svkmscmd.c
src/config/: config.c  config.h  paths.c  paths.h
src/control/: cmdctrl.c  cmdctrl.h  control.c  control.h  dbgctrl.c  debug.c  x11control.c  x11ctrl.c
src/device/: demux.c  demux.h  device.c  device.h  ffdev.c  ffdev.h  kmsdev.c  svkmsdev.c  x11.c  x11.h  x11dev.c  x11dev.h
src/encoder/: codec.c  codec.h  encoder.c  encoder.h  ffenc.c  ffenc.h  nvenc.c  openh264enc.c  swscale.c  swscale.h  vaapienc.c  vaapienc_hevc.c  vah264enc.c  vahevcenc.c  video.c  video.h  x264.c  x264.h  x264enc.c  x265enc.c
src/input/: input.c  input.h  video.c  video.h
src/system/: framerate.c  framerate.h  system.c  system.h  xlib.c  xlib.h
src/user/: debug.c  debug.h  default.c  default.h  user.c  user.h
src/util/: audio.c  audio.h  buffer.c  buffer.h  circle.c  circle.h  circle_static.c  circle_static.h  filter.c  filter.h  frame.c  frame.h  log.c  log.h  memory.c  memory.h  path.c  path.h  pktcircle.c  pktcircle.h  streaminfo.h  string.c  string.h
sys/: replay-sorcery-kms.service.in  replay-sorcery.conf  replay-sorcery.service.in
sys/arch/: .gitignore  pkgbuild.sh
sys/etc/: replay-sorcery.conf
